# sugar

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_DIRECTORY_SUBMISSIONS.md  BLOG_POST_PACKAGE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LIBRARY_USAGE.md  MARKETPLACE.md  README.md  STATUS.md  TERMS.md  V3_ROADMAP.md  VISION.md  action.yml  marketplace.json  mcp.Dockerfile  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude-plugin/: .mcp.json  IMPLEMENTATION_ROADMAP.md  MARKETPLACE_SUBMISSION.md  MCP_SERVER_IMPLEMENTATION.md  PLUGIN_OVERVIEW.md  README.md  TESTING_PLAN.md  marketplace.json  plugin.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  issue-responder.yml  release.yml  test-action.yml  test-task-types.yml
action/: CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  SETUP_SUMMARY.md  action.yml  entrypoint.py
action/examples/: advanced.yml  basic.yml  cost-optimized.yml  dry-run.yml
claude_ccal/: main.py  setup.py
claude_ccal/core/: loop.py
claude_ccal/discovery/: code_quality.py  error_monitor.py  test_coverage.py
claude_ccal/executor/: claude_wrapper.py
claude_ccal/learning/: adaptive_scheduler.py
claude_ccal/storage/: work_queue.py
config/: __init__.py  ccal.yaml  sugar.yaml
docs/: README.md  context_manager.md  issue-responder.md  task_orchestration.md
docs/dev/: config-migration-plan.md  contributing.md  local-development.md  metrics-tracking-design.md  release-process.md  slashcommands-integration-plan.md  technical-implementation-plan.md  testing.md
docs/user/: agent-sdk.md  billing.md  cli-reference.md  configuration-best-practices.md  examples.md  execution-context.md  faq.md  github-integration.md  github-label-filtering.md  gitignore-template.md  installation-guide.md  quick-start.md  troubleshooting.md
examples/: agent_interactive.py  agent_local_test.py  context_manager_demo.py  issue_responder_prompt.json  subagent_example.py
examples/claude-code-plugin/: README.md
scripts/: benchmark_v3.py
sugar/: __init__.py  __version__.py  main.py  setup.py
sugar/agent/: __init__.py  base.py  context_manager.py  hooks.py  subagent_manager.py  tools.py
sugar/billing/: api_keys.py  tiers.py  usage.py
sugar/cli/: discover.py
sugar/core/: __init__.py  loop.py
sugar/discovery/: __init__.py  code_quality.py  error_monitor.py  external_tool_config.py  github_watcher.py  orchestrator.py  prompt_templates.py  test_coverage.py
sugar/executor/: __init__.py  agent_sdk_executor.py  base.py  claude_wrapper.py  structured_request.py
sugar/integrations/: github.py
sugar/learning/: adaptive_scheduler.py  feedback_processor.py
sugar/mcp/: server.py
sugar/orchestration/: agent_router.py  task_orchestrator.py
sugar/profiles/: base.py  issue_responder.py
sugar/quality/: claude_invoker.py
sugar/quality_gates/: INTEGRATION.md  PHASE2_AND_3.md  README.md  RELEASE_NOTES.md  USER_GUIDE.md  __init__.py  config_example.yaml  coordinator.py  diff_validator.py  evidence.py  functional_verifier.py  preflight_checks.py  success_criteria.py
sugar/storage/: task_type_manager.py  work_queue.py
sugar/utils/: __init__.py  git_operations.py
sugar/workflow/: __init__.py  orchestrator.py
tests/: __init__.py  conftest.py  test_claude_invoker.py  test_cli.py  test_conftest.py  test_context_manager.py  test_core_loop.py  test_discover_cli.py  test_executor.py  test_external_tool_config.py  test_goose_integration.py  test_hold_functionality.py  test_hooks.py  test_orchestration.py  test_orchestrator.py  test_profiles.py  test_prompt_templates.py  test_quality_gates.py  test_storage.py  test_subagent_manager.py  test_task_types.py  test_v3_benchmarks.py
tests/claude_invoker/: test_integration.py
tests/core/: test_core_init.py
tests/discovery/: __init__.py  test_github_watcher.py
(+16 files in other folders)
